--- a/views/new.ejs
+++ b/views/new.ejs
@@ -6,6 +6,7 @@
       <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
+    <div class="container">
     <h1>New Destination</h1>
     <form action="/travelblog" method="POST">
       Destination: <input type="text" name="destination"> <br/>
@@ -18,5 +19,6 @@
       Things to do: <input type="url" name="thingToDo"> <br/>
       <input type="submit" value="confirm changes">
     </form>
+    </div>
   </body>
   </html>
