--- a/views/show.ejs
+++ b/views/show.ejs
@@ -6,6 +6,7 @@
       <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
+    <div class="container">
     <h1>Places I've Visited</h1>
     <h2> <%= placeData.destination %> </h2>
     <img src="<%= placeData.img %> " alt="">
@@ -28,5 +29,6 @@
         <input type="submit" value="Delete Destination">
       </form>
     </nav>
+    </div>
   </body>
 </html>
