--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,6 @@
 <header>
   <title>My Travel Blog | <%=tabTitle%> </title>
   <a href="/travelblog">Home</a>
+  <a href="/travelblog/reflections">Reflections</a>
   <h1>Places I've Visited</h1>
 </header>
