--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,32 @@
-<!DOCTYPE html>
-<html lang ="en" dire="ltr">
+<!doctype html>
+<html lang="en">
   <head>
-      <meta charset="utf-8">
-      <title>My Travel Blog | <%= titleTag %></title>
-      <link rel="stylesheet" href="/css/style.css">
+    <title>My Travel Blog</title>
+    <%- include ('./partials/head.ejs') %>
   </head>
   <body>
-    <div class="container">
-    <h1>Places I've Visited</h1>
+  <div class="container">
     <div class="row">
+      <!-- ============ HEADER ============ -->
+      <%- include('./partials/header.ejs') %>
+    <div class="hero-image">
+      <div class="hero-text">
+        <p>My name is Maha Mamoor. I love to travel in my free time. Take a look at the places I've been fortunate enough to visit. What I love most about traveling is learning about other cultures, eating great food, and taking in beautiful scenery.</p>
+      </div>
+    </div>
     <% for(let i=0; i < placeData.length; i++){
     %>
-    <div class="col-md-3">
-    <h2> <%= placeData[i].destination %> </h2>
-    <img src="<%= placeData[i].img %> " alt="">
+          <div class="col-4" id="card-container">
+            <div class="card">
+              <a href="/travelblog/<%=placeData[i]._id%>"><img src="<%= placeData[i].img %>"  class="card-img-top" alt=""></a>
+            </div>
+        </div>
+          <% } %>
+      </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <a href="/travelblog/new">Add New Destination</a>
+  <!-- ============ FOOTER ============ -->
+    <%- include ('./partials/footer.ejs') %>
     </div>
-    <nav>
-      <a href="/travelblog/<%=placeData[i]._id%>"><button type="button" name="button">More Info</button></a>
-    </nav>
-    <% } %>
-    </div>
-    </div>
-    <script type="module" src="./index.js"></script>
   </body>
-  </html>
+</html>
