--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang ="en" dire="ltr">
   <head>
-      <meta charset="utf-8">
-      <title>My Travel Blog | New Destination </title>
-      <link rel="stylesheet" href="/css/style.css">
+      <%- include ('./partials/head.ejs') %>
   </head>
   <body>
     <div class="container">
+      <!-- ============ HEADER ============ -->
+      <%- include('./partials/header.ejs') %>
     <h1>New Destination</h1>
     <form action="/travelblog" method="POST">
       Destination: <input type="text" name="destination"> <br/>
@@ -17,8 +17,10 @@
       Fun Fact: <input type="text" name="funFact"> <br/>
       Known For: <input type="text" name="knownFor"> <br/>
       Things to do: <input type="url" name="thingToDo"> <br/>
-      <input type="submit" value="confirm changes">
+      <input type="submit" value="confirm changes"/>
     </form>
     </div>
+    <!-- ============ FOOTER ============ -->
+      <%- include ('./partials/footer.ejs') %>
   </body>
   </html>
