--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,6 +5,7 @@
   </head>
   <body>
     <div class="container">
+      <a href="/travelblog" class="btn btn-info" role="button">Home</a>
       <!-- ============ HEADER ============ -->
       <%- include('./partials/header.ejs') %>
     <h1>New Destination</h1>
