--- a/views/reflections.ejs
+++ b/views/reflections.ejs
@@ -6,7 +6,7 @@
   <body>
     <div class="container">
     <header>
-      <a href="/travelblog">Home</a>
+      <a href="/travelblog" class="btn btn-info" role="button">Home</a>
     </header>
     <h1>These are my reflections</h1>
     <h2>Destination</h2>
