--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,8 +5,7 @@
   </head>
   <body>
     <div class="container">
-      <!-- ============ HEADER ============ -->
-      <%- include('./partials/header.ejs') %>
+    <a href="/travelblog" class="btn btn-info" role="button">Home</a>
     <h2> <%= placeData.destination %> </h2>
     <img src="<%= placeData.img %> " alt="">
     <h4> Languages spoken: </h4>
