--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,10 @@
 <header>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <title>My Travel Blog | <%=tabTitle%> </title>
-  <a href="/travelblog">Home</a>
-  <a href="/travelblog/reflections">Reflections</a>
-  <h1>Places I've Visited</h1>
 </header>
+
+
+<!-- source: https://mdbootstrap.com/docs/b4/jquery/navigation/hamburger-menu/ -->
+<!-- https://stackoverflow.com/questions/26317679/how-to-add-hamburger-menu-in-bootstrap -->
+<!-- source: https://stackoverflow.com/questions/67273367/bootstrap-navbar-hamburger-icon-not-showing-up -->
