--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
           <div class="col-4">
             <div class="card" style="width: auto; height: 20rem;">
               <p class="destination-name" style="font-size: 28px; text-align: center; margin: 2px 0px;"><%= placeData[i].destination%></p>
-              <a href="/travelblog/<%=placeData[i]._id%>"><img src="<%= placeData[i].img %>"  class="card-img-top img-fluid" style="width: auto; height: 16rem; align-content: center; margin: 2px 0px;"></a>
+              <a href="/travelblog/<%=placeData[i]._id%>"><img src="<%= placeData[i].img %>"  class="card-img-top img-fluid" style="width: 26rem; height: 16rem; align-content: center; margin: 2px 0px;"></a>
             </div>
         </div>
           <% } %>
